# RobotSecuritySystem

./: .gitignore  MOTION_RECOGNITION_INTEGRATION.md  README.md  WORK_SUMMARY.md  _fix_theme.py  analyze_pcap_light.py  app.py  inference_results.json  injector.py  requirements.txt  run_backend.py  side_channel_test.pcap  side_channel_test.py
.claude/: settings.json
.streamlit/: config.toml
.unified-test/: features.json  motion.json  payload-isolated.json  side.json
backend/: ai_report.py  auth.py  auth_api.py  db.py  defense_api.py  live_motion_api.py  motion_api.py  motion_recognition_api.py  papb_api.py  payload_fallback.py  side_channel_api.py  side_channel_judge.py  tasks_api.py
core/: detector.py  feature_eng.py  payload_backend_bootstrap.py
data/: robot_security.db
docs/: DEFENSE_CONTROL.md  system_integration_and_performance.tex
figures/: puppeteer.json  wifi-access-zone-fixed.md  wifi-access-zone-fixed.mmd
motion/motion/project_zip/project/: README.md  pyproject.toml  requirements.txt
motion/motion/project_zip/project/models/: action_model.joblib
motion/motion/project_zip/project/src/robot_traffic_action/: pcap_signal.py
pages/: 1_side_channel_analysis.py  2_payload_detection.py
payload-detection/: COMPLETION_REPORT.md  OPTIMIZATION_SUMMARY.md  README.md  TECHNICAL_ROADMAP.md  demo.py  evaluation.py  requirements.txt  train.bat
results/: README.md  SUBMISSION_REPORT.md  detection_results.json  side_channel_analysis_report.txt
runtime_logs/: live_payload_test.csv  live_payload_test.json
tests/: test_papb_context.py
web/: .gitignore  (+5 more)
(+131 files in other folders)
