[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-traffic-action"
version = "0.1.0"
description = "PCAP based robot action fingerprinting with signal matching features."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scapy>=2.5",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]

[project.scripts]
robot-action = "robot_traffic_action.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
